--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Robynne's Profile Card</title>
+      <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <h1>Robynne's Profile Card</h1>
-      <h2>Web Developer</h2>
-      <p>Passionate about coding and creating innovative solutions. Loves learning new technologies and collaborating on open-source projects.</p>
+      <div class="card">
+          <h1>Robynne Asato</h1>
+          <h2>Web Developer | Undergraduate student</h2>
+          <p>Aloha! I am a Food and Nutrition Entrepreneur major wtih Arizona State Univeristy Online campus. I taking additional courses to enhance my chances of being accepted into the Graphic Information Technology Graduate Program. I fell in love with the creative process of web development and learning all that I can to boost my chances of a major career change from the food industry to the tech industry.</p>
+      </div>
   </body>
 </html>
