--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
   </head>
   <body>
       <div class="card">
+          <img src="img/cat.png" alt="Cat image">
           <h1>Robynne Asato</h1>
           <h2>Web Developer | Undergraduate student</h2>
           <p>Aloha! I am a Food and Nutrition Entrepreneur major wtih Arizona State Univeristy Online campus. I taking additional courses to enhance my chances of being accepted into the Graphic Information Technology Graduate Program. I fell in love with the creative process of web development and learning all that I can to boost my chances of a major career change from the food industry to the tech industry.</p>
+
+          <h3>My Favorite Websites</h3>
+          <ul>
+              <li><a href="https://codepen.io/">CodePen</a></li>
+              <li><a href="https://github.com">GitHub</a></li>
+              <li><a href="https://www.nsls.org/">National Society of Leadership and Success</a></li>
+              <li><a href="https://chatgpt.com">ChatGPT</a></li>
+          </ul>
       </div>
   </body>
 </html>
