Update favorite websites and add social media section to profile card

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
 
           <h3>My Favorite Websites</h3>
           <ul>
-              <li><a href="https://codepen.io/">CodePen</a></li>
-              <li><a href="https://github.com">GitHub</a></li>
+              <li><a href="https://youtube.com">YouTube</a></li>
+              <li><a href="https://spotify.com">Spotify</a></li>
               <li><a href="https://www.nsls.org/">National Society of Leadership and Success</a></li>
               <li><a href="https://chatgpt.com">ChatGPT</a></li>
+          </ul>
+
+          <h3>My social media</h3>
+          <ul>
+              <li><a href="https://www.linkedin.com/in/robynne-asato-882105368/">LinkedIn</a></li>
+              <li><a href="https://github.com/raasato">GitHub</a></li>
+              <li><a href="https://codepen.io/raasato">CodePen</a></li>
           </ul>
       </div>
   </body>
